Layout is ready

--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -1,8 +1,7 @@
 @import "variables.scss";
 
-@media (max-width: 1919px) {
-  .container {
-    // width: 96%;
-    // margin: auto;
-  }
-}
+// @media (max-width: 1919px) {
+//   .container {
+
+//   }
+// }
