--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,16 +1,15 @@
-// $main-font-family: Montserrat, Arial, sans-serif;
-// $second-font-family: Mulish, Arial, sans-serif;
-// $black: #131313;
-// $second-black: #171717;
-// $white: #fff;
-// $beige: #c2ab81;
-// $grey: #808080;
-
 $white: #fff;
 $black-text: #444444;
 $red-active: #a30c33;
-$red-text: #B01736;
+$red-text: #b01736;
+$font-family: Proxima Nova Condensed;
 
+
+:root {
+  --swiper-pagination-bullet-inactive-opacity: 0.1;
+  --swiper-pagination-bullet-inactive-color: #000;
+  --swiper-pagination-color: #a30c33;
+}
 
 @mixin submenu-text {
   font-family: Proxima Nova;
@@ -23,27 +22,18 @@ $red-text: #B01736;
   flex-direction: column;
 }
 
-// @mixin background-image {
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   background-size: cover;
-// }
+@mixin background-image {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 
-// @mixin visibility {
-//   opacity: 0.8;
-//   visibility: visible;
-//   z-index: 3;
-//   transition: all 0.7s ease-in-out;
-
-// }
-
-// @mixin visibility-hidden {
-//   opacity: 0;
-//   visibility: hidden;
-// }
-
-
-
+@mixin section-title {
+  text-align: center;
+  font-size: 56px;
+  line-height: 100%;
+  font-weight: 600;
+}
 
 @keyframes fadeInFromNone {
   0% {
