--- a/src/styles/base-elements.scss
+++ b/src/styles/base-elements.scss
@@ -10,9 +10,10 @@
   transition-duration: 0.4s;
   -webkit-transition-duration: 0.4s; /* Safari */
   &__text {
-    font-family: Proxima Nova Condensed;
+    font-family: $font-family;
     color: #fff;
     font-size: 18px;
+    font-weight: 600;
     line-height: 20px;
     padding: 18px 29px;
   }
@@ -49,3 +50,5 @@
     top: 1px;
   }
 }
+
+
