--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,11 +11,11 @@
 
 .header {
   display: flex;
-  gap: 297px;
+  gap: 298px;
   width: 1250px;
   height: 85px;
   border: 1px solid #d9d9d9;
-  background: #fff;
+  background: $white;
   padding: 29px 69px;
   &__logo {
     width: 125px;
@@ -31,7 +31,7 @@
   }
 
   &__nav {
-    padding-top: 3px;
+    padding-top: 2px;
   }
 
   &__link {
@@ -62,7 +62,6 @@
 
   &__title {
     font-size: 56px;
-    font-style: normal;
     font-weight: 600;
     line-height: 100%;
   }
@@ -73,35 +72,31 @@
   justify-content: center;
   align-items: center;
   &__inner {
-    display: flex;
-    width: 1110px;
-    height: 352px;
+    @include flex-column;
+    max-width: 1110px;
+    width: 100%;
+    min-height: 352px;
     padding: 100px 110px;
-    margin-top: 102px;
+    margin-top: 101px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    background: #fff;
+    background: $white;
     box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.08);
   }
 
   &__text {
     font-size: 32px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 120%;
+    line-height: 119%;
     text-align: center;
     width: 890px;
-    &_red {
-      color: $red-text;
-    }
   }
 
   &__digits {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    row-gap: 80px;
+    row-gap: 81px;
     margin-top: 99px;
     margin-bottom: 98px;
     width: 890px;
@@ -109,13 +104,14 @@
 
   .first-row {
     display: flex;
-    gap: 185px;
+    gap: 186px;
     width: 100%;
   }
   .second-row {
     display: flex;
-    column-gap: 180px;
+    column-gap: 181px;
     justify-content: center;
+    margin-left: 2px;
     .description__item {
       max-width: 213px;
     }
@@ -124,7 +120,7 @@
   &__item {
     @include flex-column;
     max-width: 243px;
-    gap: 4px;
+    gap: 3px;
     &_padding {
       padding-left: 2px;
     }
@@ -142,13 +138,12 @@
   &__sign {
     color: $red-active;
     font-size: 64px;
-    line-height: 100%;
     opacity: 0.95;
     &_bold {
       font-weight: 900;
     }
   }
-  
+
   &__explanation {
     font-size: 18px;
     font-weight: 400;
@@ -160,7 +155,7 @@
   }
 }
 
-// Section map
+// Section Map
 
 .offices {
   @include flex-column;
@@ -187,16 +182,17 @@
 
   &__inner {
     display: flex;
-    gap: 16px;
+    gap: 17px;
+
     &:hover {
       cursor: pointer;
     }
   }
 
   &__title {
+    padding-top: 5px;
     font-size: 24px;
     font-weight: 600;
-    line-height: 100%;
   }
 
   &__dropdown-arrow {
@@ -217,7 +213,7 @@
     left: -70px;
     width: 1250px;
     padding: 30px 10px;
-    background: #fff;
+    background: $white;
     box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.06);
     cursor: auto;
     transition: all 0.7s ease;
@@ -290,25 +286,308 @@
   }
 }
 
+// Section Mission
+
 .mission {
-  border: 1px solid green;
-}
-.directions {
-  border: 1px solid brown;
-}
-.compensation {
-  border: 1px solid pink;
-}
-.corporate-life {
-  border: 1px solid yellow;
+  position: relative;
+  margin-top: 98px;
+  width: 1250px;
+  height: 471px;
+  overflow: hidden;
+  background: $red-active;
+  background-repeat: no-repeat;
+  &__content {
+    @include flex-column;
+    position: relative;
+    text-align: center;
+    color: $white;
+    width: 1081px;
+    align-items: center;
+    gap: 40px;
+    margin: 0 auto;
+    padding-top: 140px;
+    z-index: 15;
+  }
+
+  &__title {
+    font-size: 56px;
+    width: 890px;
+    font-weight: 600;
+  }
+
+  &__text {
+    width: 100%;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 150%;
+    padding-right: 2px;
+  }
+
+  &__pattern {
+    position: absolute;
+    width: 300px;
+    height: 376.948px;
+    flex-shrink: 0;
+    top: 47px;
+    opacity: 0.5;
+    z-index: 1;
+    &_left {
+      background:
+        url("../images/left-pattern.png"),
+        $red-active 50% / cover no-repeat;
+    }
+    &_right {
+      background:
+        url("../images/right-pattern.png"),
+        $red-active 50% / cover no-repeat;
+      right: -5px;
+    }
+  }
 }
 
-.hidden {
-  display: none;
+// Section Directions
+
+.directions {
+  &__title {
+    margin-bottom: 55px;
+  }
+
+  &__cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 22.5px 20px;
+    margin-left: -5px;
+  }
+
+  &__card {
+    @include background-image;
+    width: 615px;
+    height: 260px;
+    flex-shrink: 0;
+    position: relative;
+    overflow: hidden;
+    &_1 {
+      background-image: url("../images/direction-1.png");
+    }
+    &_2 {
+      background-image: url("../images/direction-2.png");
+    }
+    &_3 {
+      background-image: url("../images/direction-3.png");
+    }
+    &_4 {
+      background-image: url("../images/direction-4.png");
+    }
+    &_5 {
+      background-image: url("../images/direction-5.png");
+    }
+    &_6 {
+      background-image: url("../images/direction-6.png");
+    }
+  }
+
+  .card {
+    position: absolute;
+    top: 180px;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(45, 54, 83, 0.6);
+    cursor: pointer;
+    transition: top 0.6s linear;
+    &__content {
+      @include flex-column;
+      row-gap: 21px;
+      color: $white;
+      width: 500px;
+      padding: 28px 0 28px 20px;
+      &_padding {
+        padding-top: 16px;
+      }
+    }
+
+    &__title {
+      font-size: 24px;
+      line-height: 100%;
+      font-weight: 600;
+      &_line {
+        line-height: 110%;
+      }
+    }
+
+    &__text {
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 140%;
+      opacity: 0;
+      transition: opacity 0.8s ease;
+    }
+
+    &__title_margin {
+      line-height: 140%;
+    }
+
+    &:hover {
+      top: 0;
+    }
+
+    &:hover .card__text {
+      opacity: 1;
+      transition: opacity 1s ease;
+    }
+
+    &:hover .card__content_padding {
+      padding-top: 28px;
+    }
+  }
 }
+
+// Section Compensation
+
+.compensation {
+  width: 1110px;
+  margin: auto;
+  background: $white;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.06);
+  flex-shrink: 0;
+  &__wrapper {
+    margin: 0 78px;
+    padding-top: 81px;
+  }
+
+  &__info {
+    @include flex-column;
+    gap: 50px;
+    margin-bottom: 64px;
+  }
+
+  &__icons {
+    display: flex;
+    gap: 16px;
+  }
+
+  .icon {
+    @include flex-column;
+    align-items: center;
+    gap: 12px;
+    width: 178px;
+    height: 160px;
+    &__wrapper {
+      position: relative;
+      width: 110px;
+      height: 110px;
+      flex-shrink: 0;
+    }
+
+    &__img {
+      position: absolute;
+      top: 50%;
+      bottom: 50%;
+      left: 50%;
+      right: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    &__name {
+      text-align: center;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 110%;
+    }
+  }
+
+  &__extra {
+    @include flex-column;
+    gap: 48px;
+    padding-top: 63px;
+    padding-bottom: 62px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__text {
+    text-align: center;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 130%;
+    width: 700px;
+    margin: auto;
+  }
+}
+
+.corporate {
+  width: 1110px;
+  margin: auto;
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 56px;
+  }
+
+  &__title {
+    font-size: 56px;
+    font-weight: 600;
+    padding-top: 22px;
+  }
+}
+
+// Slider
+
+.slider {
+  margin-bottom: 70px;
+  &__btns {
+    display: flex;
+    gap: 20px;
+    margin-top: -3px;
+  }
+  &__btn {
+    width: 56px;
+    height: 56px;
+    fill: #f0f0f0;
+    border-radius: 50%;
+  }
+}
+
+.swiper-pagination-bullet {
+  height: 6px;
+  width: 214px;
+  flex: 1 0 0;
+  transition: all 0.5s;
+  background: $red-active;
+  border-radius: 0;
+  background: var(--swiper-pagination-bullet-inactive-color);
+  opacity: var(--swiper-pagination-bullet-inactive-opacity);
+}
+
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background: var(--swiper-pagination-color);
+}
+
+.swiper-pagination {
+  position: static;
+  margin-top: 18px;
+}
+
+// Common styles
 
 .show {
   display: flex;
   opacity: 1;
   animation: fadeInFromNone 0.7s ease-in-out;
+}
+
+.margin__bottom_100 {
+  margin-bottom: 100px;
+}
+
+.section-title {
+  @include section-title;
+}
+
+.highlight-text {
+  color: $red-text;
+}
+
+.divider {
+  margin-left: -50px;
 }
