--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -1,7 +1,533 @@
 @import "variables.scss";
 
-// @media (max-width: 1919px) {
-//   .container {
+@media (min-width: 1251px) {
+  .container {
+    .whitespace_three {
+      display: none;
+    }
 
-//   }
-// }
+    .header__menu {
+      width: 688px;
+    }
+  }
+}
+
+@media (max-width: 1249px) {
+  .container {
+    width: clamp(290px, 100%, 1250px);
+    .header {
+      gap: 5px;
+      justify-content: space-between;
+      padding: 29px 32px;
+    }
+
+    .hero {
+      &__title {
+        font-size: clamp(28px, calc(5vw + 8px), 56px);
+      }
+    }
+    .description {
+      &__inner {
+        padding: 100px 72px;
+      }
+
+      &__item:nth-last-child(2) {
+        margin-right: 0;
+      }
+
+      &__item:last-child .description__digit {
+        margin-left: 0;
+      }
+
+      &__item:last-child .description__explanation {
+        margin-left: 0;
+      }
+    }
+
+    .mission {
+      height: clamp(250px, calc(40vw + 5px), 471px);
+      &__pattern {
+        width: clamp(150px, calc(23.84vw + 1.5%), 300px);
+        height: clamp(192px, calc(31.4vw + 2%), 382px);
+        background-size: cover;
+        top: 50%;
+        bottom: 50%;
+        transform: translateY(-50%);
+      }
+
+      &__content {
+        padding-top: clamp(32px, 10.4vw, 140px);
+      }
+    }
+
+    .offices {
+      width: 100%;
+      overflow-x: scroll;
+      &__header {
+        gap: 16px;
+      }
+
+      &__dropdown {
+        width: 100%;
+      }
+
+      &__dropdown-menu {
+        width: inherit;
+        left: 0;
+      }
+    }
+
+    .compensation {
+      &__wrapper {
+        margin: 0;
+      }
+    }
+
+    .directions {
+      &__cards {
+        margin: auto 5px;
+        justify-content: center;
+      }
+    }
+
+    .corporate {
+      &__header {
+        margin-left: 8px;
+        margin-right: 8px;
+      }
+    }
+
+    .swiper-pagination {
+      display: none;
+    }
+
+    .divider {
+      margin: 0;
+      svg {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (max-width: 920px) {
+  .container {
+    .header {
+      gap: 10px;
+      justify-content: space-between;
+      padding: 29px 16px;
+      &__menu {
+        flex-wrap: wrap;
+        gap: 5px 10px;
+        height: auto;
+      }
+      &__link {
+        line-height: 16px;
+        font-size: clamp(14px, calc(1vw + 8px), 18px);
+      }
+
+      &__nav {
+        padding: 0;
+      }
+    }
+
+    .hero {
+      &__content {
+        margin: clamp(40px, 8.26vw, 158px) 50px;
+      }
+    }
+
+    .description {
+      &__inner {
+        padding: 24px 16px;
+      }
+      &__text {
+        font-size: clamp(16px, calc(2vw + 8px), 32px);
+      }
+
+      &__digit {
+        gap: 4px;
+        font-size: clamp(40px, calc(6vw + 16px), 80px);
+      }
+      &__digits {
+        margin-left: 8px;
+        margin-right: 8px;
+      }
+
+      &__item {
+        align-items: center;
+      }
+
+      &__sign {
+        font-size: clamp(30px, calc(3vw + 16px), 64px);
+      }
+    }
+
+    .offices {
+      &__menu {
+        width: 100%;
+        gap: 29px;
+      }
+
+      &__image {
+        width: 1100px;
+      }
+      &__item {
+        font-size: 18px;
+        line-height: 16px;
+      }
+
+      &__header {
+        padding: 28px 16px 22px;
+        gap: 16px;
+        width: inherit;
+        flex-direction: column;
+      }
+
+      .active::before {
+        bottom: -22px;
+      }
+    }
+    .compensation {
+      &__wrapper {
+        margin: 0;
+      }
+
+      &__text {
+        font-size: clamp(22px, calc(2vw + 8px), 28px);
+      }
+    }
+
+    .mission {
+      &__text {
+        line-height: 130%;
+        font-size: clamp(16px, calc(2vw + 8px), 32px);
+        padding: 0 5px;
+      }
+    }
+
+    .directions {
+      .card {
+        &__content {
+          width: inherit;
+          padding-right: 8px;
+        }
+      }
+    }
+
+    .section-title {
+      font-size: clamp(28px, calc(5vw + 8px), 56px);
+    }
+
+    .slider {
+      margin-bottom: 49px;
+    }
+
+    .slider__btns {
+      display: none;
+    }
+
+    .corporate {
+      margin: 0 5px;
+      &__title {
+        font-size: clamp(28px, calc(5vw + 8px), 56px);
+      }
+    }
+  }
+}
+
+@media (min-width: 321px) and (max-width: 1249px) {
+  .whitespace,
+  .whitespace_three {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  main .offices {
+    &__header {
+      .offices__menu {
+        width: 768px;
+      }
+
+      .submenu {
+        &__item:hover {
+          cursor: pointer;
+        }
+
+        &__arrow {
+          display: block;
+        }
+
+        &__links {
+          display: none;
+        }
+      }
+
+      .submenu__item:hover .submenu__links {
+        display: flex;
+        transition: all 0.7s ease;
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    min-width: 290px;
+    padding: 0 15px;
+    .header {
+      flex-direction: column;
+      min-width: 290px;
+      gap: 15px;
+      justify-content: space-between;
+      padding: 15px 4px;
+      height: 110px;
+    }
+    .hero {
+      &__content {
+        gap: 20px;
+        margin: 40px 5px 76px;
+      }
+    }
+    .description {
+      margin-bottom: 14px;
+      &__inner {
+        padding: 24px 6px;
+        margin-top: 60px;
+        min-height: 181px;
+      }
+
+      &__item {
+        max-width: 180px;
+        width: 50%;
+      }
+
+      &__item:nth-child(2) {
+        margin-left: -9px;
+      }
+
+      &__item:nth-child(4) {
+        margin-left: -6px;
+      }
+
+      &__item:last-child {
+        width: 180px;
+        margin-left: 0;
+      }
+
+      &__explanation {
+        font-size: 16px;
+        &_long {
+          padding-top: 0px;
+          text-align: center;
+        }
+      }
+
+      &__digits {
+        column-gap: 0px;
+        row-gap: 23px;
+        margin: 51px 0 39px;
+      }
+    }
+
+    .offices {
+      gap: 8px;
+      &__header {
+        padding: 14px 0 22px 5px;
+        flex-direction: column;
+      }
+
+      &__title {
+        font-size: 20px;
+      }
+
+      &__inner {
+        gap: 5px;
+      }
+
+      &__menu {
+        gap: 16.5px;
+        max-width: 520px;
+      }
+
+      &__image {
+        width: 840px;
+        height: auto;
+        max-height: 410px;
+      }
+
+      &__item {
+        font-size: 14px;
+      }
+
+      .submenu {
+        &__item {
+          font-size: 14px;
+        }
+      }
+    }
+
+    .mission {
+      margin-top: 0;
+      height: clamp(186px, 30vw, 250px);
+      &__content {
+        padding: 32px 0;
+        gap: 11px;
+      }
+
+      &__pattern {
+        width: clamp(125px, 15.83vw, 150px);
+        height: clamp(157px, 19.79vw, 192px);
+        top: 52%;
+      }
+      &__pattern_left {
+        left: -10%;
+      }
+      &__pattern_right {
+        right: -5%;
+      }
+    }
+
+    .directions {
+      &__title {
+        margin-bottom: 14px;
+      }
+
+      &__cards {
+        row-gap: 10px;
+      }
+
+      &__card {
+        height: 60px;
+        background-position: top;
+        background-size: 200%;
+        transition: all 0.7s ease;
+      }
+
+      &__card:last-child .card__content {
+        padding: 8px 10px;
+      }
+
+      &__card:last-child .card__title br {
+        display: block;
+      }
+
+      &__card:hover {
+        height: 240px;
+        transition: all 0.7s ease;
+      }
+
+      .card {
+        top: 0;
+        &__title {
+          font-size: 20px;
+        }
+        &__arrow {
+          display: block;
+        }
+        &__content {
+          position: relative;
+          padding: 20px 10px;
+          &_padding {
+            padding: 10px;
+          }
+        }
+      }
+    }
+
+    .compensation {
+      margin-bottom: -4px;
+      &__wrapper {
+        padding-top: 22px;
+      }
+
+      &__info {
+        gap: 40px;
+        margin-bottom: 12px;
+        .icon {
+          width: 120px;
+        }
+
+        .compensation__icons .icon:last-child .icon__img {
+          width: 80px;
+          height: 80px;
+        }
+      }
+
+      .icon {
+        height: 108px;
+        &__wrapper {
+          width: 80px;
+          height: 80px;
+        }
+        &__name {
+          font-size: 16px;
+        }
+        &__img {
+          width: 35px;
+          height: 35px;
+        }
+
+        &__background {
+          width: 80px;
+          height: 80px;
+        }
+      }
+
+      &__icons {
+        gap: 43px 8px;
+      }
+
+      &__extra {
+        padding-top: 19px;
+        gap: 23px;
+        .compensation__icons {
+          gap: 25px 26px;
+        }
+        .icon {
+          width: 80px;
+        }
+      }
+    }
+
+    .corporate {
+      &__header {
+        margin: 0 0 20px;
+      }
+    }
+
+    .button {
+      &__text {
+        padding: 6px 25px;
+        font-size: 16px;
+      }
+    }
+
+    .whitespace_one {
+      display: none;
+    }
+
+    .margin__bottom_100 {
+      margin-bottom: 52px;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .container {
+    .description {
+      &__item {
+        align-items: center;
+      }
+
+      &__digits {
+        justify-content: normal;
+      }
+
+      &__item:last-child {
+        margin-left: 53px;
+      }
+    }
+  }
+}
