--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 @import "variables.scss";
 @import "normalize.scss";
 @import "base-elements.scss";
+@import "media.scss";
 
 .container {
   max-width: 1250px;
@@ -12,7 +13,8 @@
 .header {
   display: flex;
   gap: 298px;
-  width: 1250px;
+  max-width: 1250px;
+  width: 100%;
   height: 85px;
   border: 1px solid #d9d9d9;
   background: $white;
@@ -20,7 +22,6 @@
   &__logo {
     width: 125px;
     height: 25px;
-    flex-shrink: 0;
   }
 
   &__menu {
@@ -48,11 +49,10 @@
   background:
     url("../images/bg.jpg"),
     lightgray 50% / cover no-repeat;
-  width: 1250px;
-  height: 600px;
-  flex-shrink: 0;
+  background-size: cover;
+  min-width: 280px;
   &__content {
-    width: 709px;
+    max-width: 709px;
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
@@ -74,13 +74,13 @@
   &__inner {
     @include flex-column;
     max-width: 1110px;
+    min-width: 280px;
     width: 100%;
     min-height: 352px;
     padding: 100px 110px;
     margin-top: 101px;
     justify-content: center;
     align-items: center;
-    flex-shrink: 0;
     background: $white;
     box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.08);
   }
@@ -89,7 +89,7 @@
     font-size: 32px;
     line-height: 119%;
     text-align: center;
-    width: 890px;
+    max-width: 890px;
   }
 
   &__digits {
@@ -97,33 +97,30 @@
     flex-wrap: wrap;
     justify-content: center;
     row-gap: 81px;
+    column-gap: 186px;
     margin-top: 99px;
     margin-bottom: 98px;
-    width: 890px;
-  }
-
-  .first-row {
-    display: flex;
-    gap: 186px;
-    width: 100%;
-  }
-  .second-row {
-    display: flex;
-    column-gap: 181px;
-    justify-content: center;
-    margin-left: 2px;
-    .description__item {
-      max-width: 213px;
-    }
+    max-width: 890px;
   }
 
   &__item {
     @include flex-column;
+    align-items: flex-start;
     max-width: 243px;
-    gap: 3px;
-    &_padding {
-      padding-left: 2px;
-    }
+    text-align: center;
+    gap: 4px;
+  }
+
+  &__item:nth-last-child(2) {
+    margin-right: 7px;
+  }
+
+  &__item:last-child &__digit {
+    margin-left: -10px;
+  }
+
+  &__item:last-child &__explanation {
+    margin-left: -13px;
   }
 
   &__digit {
@@ -148,9 +145,10 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 150%;
+    max-width: 200px;
+    text-align: left;
     &_long {
       line-height: 120%;
-      padding-top: 1px;
     }
   }
 }
@@ -164,8 +162,8 @@
   &__header {
     display: flex;
     justify-content: space-between;
-    flex-shrink: 0;
-    height: 80px;
+    flex-wrap: wrap;
+    min-height: 80px;
     padding: 28px 70px;
     box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.06);
   }
@@ -183,7 +181,6 @@
   &__inner {
     display: flex;
     gap: 17px;
-
     &:hover {
       cursor: pointer;
     }
@@ -220,16 +217,23 @@
   }
 
   .submenu {
-    display: grid;
-    grid-template-columns: repeat(8, auto);
-    grid-column-gap: 20px;
-    width: 1113px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px 20px;
+    max-width: 1113px;
     &__item {
       @include submenu-text;
       @include flex-column;
       gap: 12px;
       cursor: auto;
     }
+
+    &__item-name {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
     &__links {
       @include flex-column;
       gap: 12px;
@@ -238,6 +242,12 @@
       color: $black-text;
       font-weight: 400;
       cursor: pointer;
+    }
+
+    &__arrow {
+      display: none;
+      width: 8px;
+      height: 5px;
     }
   }
 
@@ -261,7 +271,8 @@
     }
   }
 
-  .active {
+  .active,
+  .mobile_active {
     color: $red-active;
   }
 
@@ -283,6 +294,7 @@
   &__image {
     max-width: 1190px;
     height: 604px;
+    min-height: 400px;
   }
 }
 
@@ -291,7 +303,7 @@
 .mission {
   position: relative;
   margin-top: 98px;
-  width: 1250px;
+  max-width: 1250px;
   height: 471px;
   overflow: hidden;
   background: $red-active;
@@ -301,18 +313,12 @@
     position: relative;
     text-align: center;
     color: $white;
-    width: 1081px;
+    max-width: 1081px;
     align-items: center;
     gap: 40px;
     margin: 0 auto;
     padding-top: 140px;
     z-index: 15;
-  }
-
-  &__title {
-    font-size: 56px;
-    width: 890px;
-    font-weight: 600;
   }
 
   &__text {
@@ -327,7 +333,6 @@
     position: absolute;
     width: 300px;
     height: 376.948px;
-    flex-shrink: 0;
     top: 47px;
     opacity: 0.5;
     z-index: 1;
@@ -361,11 +366,11 @@
 
   &__card {
     @include background-image;
-    width: 615px;
+    max-width: 615px;
     height: 260px;
-    flex-shrink: 0;
     position: relative;
     overflow: hidden;
+    width: 100%;
     &_1 {
       background-image: url("../images/direction-1.png");
     }
@@ -384,6 +389,10 @@
     &_6 {
       background-image: url("../images/direction-6.png");
     }
+  }
+
+  &__card:last-child .card__title br {
+    display: none;
   }
 
   .card {
@@ -414,6 +423,20 @@
       }
     }
 
+    &__arrow {
+      display: none;
+      position: absolute;
+      top: 12px;
+      right: 6px;
+      transition: transform 0.7s ease;
+    }
+
+    &:hover .card__arrow {
+      cursor: pointer;
+      transform: rotate(-180deg);
+      transition: transform 0.7s ease;
+    }
+
     &__text {
       font-size: 17px;
       font-weight: 400;
@@ -434,24 +457,20 @@
       opacity: 1;
       transition: opacity 1s ease;
     }
-
-    &:hover .card__content_padding {
-      padding-top: 28px;
-    }
   }
 }
 
 // Section Compensation
 
 .compensation {
-  width: 1110px;
+  max-width: 1110px;
   margin: auto;
   background: $white;
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.06);
-  flex-shrink: 0;
+  margin-bottom: 100px;
   &__wrapper {
-    margin: 0 78px;
-    padding-top: 81px;
+    padding-top: 80px;
+    width: 100%;
   }
 
   &__info {
@@ -462,6 +481,8 @@
 
   &__icons {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 16px;
   }
 
@@ -475,7 +496,6 @@
       position: relative;
       width: 110px;
       height: 110px;
-      flex-shrink: 0;
     }
 
     &__img {
@@ -509,13 +529,13 @@
     font-weight: 600;
     font-size: 40px;
     line-height: 130%;
-    width: 700px;
+    max-width: 700px;
     margin: auto;
   }
 }
 
 .corporate {
-  width: 1110px;
+  max-width: 1110px;
   margin: auto;
   &__header {
     display: flex;
@@ -533,6 +553,9 @@
 // Slider
 
 .slider {
+  width: 100%;
+  height: auto;
+  min-height: 210px;
   margin-bottom: 70px;
   &__btns {
     display: flex;
@@ -568,6 +591,11 @@
   margin-top: 18px;
 }
 
+.swiper-slide img {
+  width: 100%;
+  height: auto;
+}
+
 // Common styles
 
 .show {
@@ -590,4 +618,7 @@
 
 .divider {
   margin-left: -50px;
+  svg {
+    width: 100%;
+  }
 }
